--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#tecnologias">Tecnologias</a></li>
-                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="index2.html" target="_blank">Projetos</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
