--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil Online</title>
+    <title>Ivan de Araujo</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="imagens/IMG_20220819_120959_880.jpg" type="image/x-icon">
 </head>
 <body>
+    <header class="header">
     <div>
         <h1 class="nome">Ivan de Araujo</h1>
     </div>
-
+</header>
     <section class="perfil">
         <img src="imagens/IMG_20220819_120959_880.jpg" alt="foto de perfil" height="200" class="foto-perfil">
     </section>
@@ -50,7 +51,7 @@
             <a href="index2.html" target="_blank"><h2>PROJETOS</h2>
             </a>
         </section>
-           
+           <footer>
        <section id="contato" class="contato">
          <h2 class="contato-titulo">CONTATO</h2>
            <div class="container-aplicativos">
